--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev:start": "ts-node -r tsconfig-paths/register -r dotenv/config src/bot.ts",
-    "dev:restart": "ts-node-dev -r tsconfig-paths/register -r dotenv/config src/bot.ts"
+    "deploy:local": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/utilities/deploy.local.ts",
+    "deploy:global": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/utilities/deploy.global.ts",
+    "dev:start": "ts-node --files -r tsconfig-paths/register -r dotenv/config src/bot.ts",
+    "dev:restart": "ts-node-dev --files -r tsconfig-paths/register -r dotenv/config src/bot.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +17,6 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.1",
-    "@types/tmi.js": "^1.8.3",
     "dotenv": "^16.3.1",
     "prisma": "^4.16.0",
     "ts-node": "^10.9.1",
@@ -27,10 +28,10 @@
     "@prisma/client": "^4.16.0",
     "@t3-oss/env-core": "^0.4.1",
     "cors": "^2.8.5",
+    "discord.js": "^14.11.0",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
-    "tmi.js": "^1.8.5",
     "zod": "^3.21.4"
   }
 }
